Link the code with nacl opensource cryptology library and make prototipes visible to my program

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -6,11 +6,12 @@ ennerre_INCL_DIR = ${ennerre_DIR}include
 
 CFLAGS = -g \
 	   -Wall \
+	   -I/usr/include/nacl \
 	   -Wno-sign-compare \
 	   -Wno-unused-parameter \
 	   -Wextra \
 	   -DDEBUG    
 
-LDLIBS = -lpthread
+LDLIBS = -lpthread -lnacl
 
 RM = rm -f
